Replace 'Hover Me' text with emoji spans

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ body{
  </style>
   <body>
     <div class = "cards">
-      <p><span>Hover Me</span></p>
-      <p><span>Hover Me</span></p>
-      <p><span>Hover Me</span></p>
+      <p><span>🤗</span></p>
+      <p><span>🥰</span></p>
+      <p><span>😄</span></p>
     </div>
   </body>
  
