Change background color to image in index.html

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ body{
   overflow:hidden;
   border-radius:2px;
   transition:all.5s;
-  background-color:#212121;
+  background-image:url(gradient-hexagonal-background_23-2148944164.jpg);
   border:1px solid #5ac3ff;
   display: flex;
   justify-content: center;
