Update images in Effect.html for cube faces

--- a/Effect.html
+++ b/Effect.html
@@ -85,22 +85,22 @@ body{
  <body> 
   <div class="cube"> 
    <div class="face front"> 
-    <img src="" alt=""> 
+    <img src="Sukuna.jpg" alt=""> 
    </div> 
    <div class="face back"> 
-    <img src="" alt=""> 
+    <img src="Solo.jpg" alt=""> 
    </div> 
    <div class="face right"> 
-    <img src="" alt=""> 
+    <img src="Gojo.jpg" alt=""> 
    </div> 
    <div class="face left"> 
-    <img src="" alt=""> 
+    <img src="Naruto.jpg" alt=""> 
    </div> 
    <div class="face top"> 
-    <img src="" alt=""> 
+    <img src="Solo.jpg" alt=""> 
    </div> 
    <div class="face bottom"> 
-    <img src="" alt=""> 
+    <img src="Naruto.jpg" alt=""> 
    </div> 
   </div> 
  </body>
