--- a/Effect.html
+++ b/Effect.html
@@ -63,7 +63,7 @@ body{
   transform:rotateY(-90deg) translateZ(90px);
 }
 .top{
-  transform:rotateY(90deg) translateZ(90px);
+  transform:rotateX(90deg) translateZ(90px);
 }
 .bottom{
   transform:rotateX(-90deg) translateZ(90px);
