--- a/3d Cube.html
+++ b/3d Cube.html
@@ -85,22 +85,22 @@ body{
  <body> 
   <div class="cube"> 
    <div class="face front"> 
-    <img src="Sukuna.jpg" alt=""> 
+    <img src="TOP.jpg" alt=""> 
    </div> 
    <div class="face back"> 
-    <img src="Solo.jpg" alt=""> 
+    <img src="Bottom.jpg" alt=""> 
    </div> 
    <div class="face right"> 
-    <img src="Gojo.jpg" alt=""> 
+    <img src="Left.jpg" alt=""> 
    </div> 
    <div class="face left"> 
-    <img src="Naruto.jpg" alt=""> 
+    <img src="Right.jpg" alt=""> 
    </div> 
    <div class="face top"> 
-    <img src="Solo.jpg" alt=""> 
+    <img src="Front.jpg" alt=""> 
    </div> 
    <div class="face bottom"> 
-    <img src="Naruto.jpg" alt=""> 
+    <img src="Back.jpg" alt=""> 
    </div> 
   </div> 
  </body>
