Add audio element for autoplaying theme music
Added an audio element to play 'doremon theme.mp3' automatically.

--- a/3d Cube.html
+++ b/3d Cube.html
@@ -83,6 +83,8 @@ body{
    </style>
  </head> 
  <body> 
+  <audio src="doremon theme.mp3" autoplay loop muted></audio>
+  
   <div class="cube"> 
    <div class="face front"> 
     <img src="TOP.jpg" alt=""> 
