Update audio element to play sound without mute
Removed 'muted' attribute from audio element.

--- a/3d Cube.html
+++ b/3d Cube.html
@@ -83,7 +83,7 @@ body{
    </style>
  </head> 
  <body> 
-  <audio src="doremon theme.mp3" autoplay loop muted></audio>
+  <audio src="doremon theme.mp3" autoplay loop></audio>
   
   <div class="cube"> 
    <div class="face front"> 
